--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <option value="anxious">Anxious 😰</option>
                     <option value="motivated">Motivated 🚀</option>
                 </select>
-                <button onclick="showGuidance()">Get Guidance</button>
+                <button onclick="showGuidance()" id="guidance">Get Guidance</button>
             </div>
 
             <!-- Guidance Section -->
