--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
             <!-- Self-Care To-Do List -->
             <div class="todo-container">
                 <h2>📌 Self-Care To-Do List</h2>
-                <input type="text" id="todoInput" placeholder="Add an activity...">
-                <button onclick="addTodo()">Add</button>
+                <div class="group">
+                    <input type="text" id="todoInput" placeholder="Add an activity...">
+                    <button onclick="addTodo()">Add</button>
+                </div>
                 <ul id="todoList"></ul>
             </div>
 
